# optimate_osm_airport_data_dumper

./: README.md  main.py  pyproject.toml  requirements.txt
